--- a/config.ini
+++ b/config.ini
@@ -10,7 +10,7 @@ fp = ""
 # 已经是茅台的sku_id了
 sku_id = 100012043978
 # 设定时间 # 2021-01-01 10:00:00.100000
-buy_time = 2021-01-13 09:59:57.800
+buy_time = 2021-01-26 09:59:56.900
 # 设定软件抢购开始后的运行时间；单位：分钟
 continue_time = 4
 # 线程数量
@@ -34,8 +34,8 @@ payment_pwd = ""
 # 使用了Server酱的推送服务
 # 如果想开启下单成功后消息推送，则将 enable 设置为 true，默认为 false 不开启推送
 # 开启消息推送必须填入 sckey，如何获取请参考 http://sc.ftqq.com/3.version。感谢Server酱～
-server_chan_enable = false
-server_chan_sckey =
+server_chan_enable = true
+server_chan_sckey = SCU74446Td97a46a9b2da4973bee733d5e4cb7f855ffd5ba3e3470
 
 # 使用了smtp邮箱推送服务
 # 如果想开启登录二维码邮箱推送，则将 email_enable 设置为 true，默认为 false 不开启邮箱推送
