--- a/config.ini
+++ b/config.ini
@@ -35,7 +35,7 @@ payment_pwd = ""
 # 如果想开启下单成功后消息推送，则将 enable 设置为 true，默认为 false 不开启推送
 # 开启消息推送必须填入 sckey，如何获取请参考 http://sc.ftqq.com/3.version。感谢Server酱～
 server_chan_enable = true
-server_chan_sckey = SCU74446Td97a46a9b2da4973bee733d5e4cb7f855ffd5ba3e3470
+server_chan_sckey =
 
 # 使用了smtp邮箱推送服务
 # 如果想开启登录二维码邮箱推送，则将 email_enable 设置为 true，默认为 false 不开启邮箱推送
